--- a/calculator.html
+++ b/calculator.html
@@ -232,7 +232,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- ✅ COLLAPSIBLE DATE GRID -->
 <div class="dates-grid-container">
-<h3 id="toggleDates">Select a Date ▼</h3>
+<h3 id="toggleDates">Available Dates For Pressure Washing ▼</h3>
 <div class="dates-grid" id="datesGrid">
 <!-- Dates populated via JS -->
 </div>
