--- a/calculator.html
+++ b/calculator.html
@@ -344,7 +344,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 // DATE GRID ARRAY
 const dates = [
 { date: "Monday 26th Jan", status: "available" },
-{ date: "Tuesday 27th Jan", status: "Partially booked" },
+{ date: "Tuesday 27th Jan", status: "booked" },
 { date: "Wednesday 28th Jan", status: "available" },
 { date: "Thursday 29th Feb", status: "available" },
 { date: "Friday 30th Feb", status: "available" },
