--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -56,11 +56,55 @@ margin-top:40px;
 font-size:14px;
 }
 
+/* DATES GRID */
+.dates-grid-container {
+max-width:420px;
+width:95%;
+margin:20px auto;
+padding:15px;
+border:2px solid #000;
+border-radius:10px;
+background:#f5f5f5;
+}
+
+.dates-grid-container h3 {
+text-align:center;
+margin-bottom:10px;
+font-size:18px;
+cursor:pointer;
+}
+
+.dates-grid {
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+gap:10px;
+text-align:center;
+display:none; /* hidden by default */
+}
+
+.date-item {
+padding:10px;
+border-radius:6px;
+font-weight:600;
+cursor: default; /* read-only */
+}
+
+.date-available {
+background-color:#27ae60;
+color:#fff;
+}
+
+.date-booked {
+background-color:#e74c3c;
+color:#fff;
+opacity:0.7;
+}
+
 /* CALCULATOR STYLES */
 .calculator {
 max-width: 420px;
 width: 95%;
-margin: 30px auto;
+margin: 10px auto 30px;
 padding: 20px;
 background: #fff;
 border: 2px solid #000;
@@ -187,7 +231,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 </header>
 
 <!-- ✅ MAIN CONTENT -->
-<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+<main style="max-width:1200px; margin:0 auto; padding:0 15px;">
 
 <!-- PRESSURE WASHING CALCULATOR -->
 <div class="calculator">
@@ -281,6 +325,14 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 </div>
 <!-- END CALCULATOR -->
 
+<!-- ✅ COLLAPSIBLE DATE GRID UNDER CALCULATOR -->
+<div class="dates-grid-container">
+<h3 id="toggleDates">Select a Date ▼</h3>
+<div class="dates-grid" id="datesGrid">
+<!-- Dates populated by JS -->
+</div>
+</div>
+
 </main>
 
 <!-- ✅ FOOTER -->
@@ -289,6 +341,39 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 </footer>
 
 <script>
+// DATE GRID ARRAY
+const dates = [
+{ date: "Monday 27th Jan", status: "available" },
+{ date: "Wednesday 29th Jan", status: "booked" },
+{ date: "Friday 31st Jan", status: "available" },
+{ date: "Monday 3rd Feb", status: "available" }
+];
+
+const datesGridEl = document.getElementById("datesGrid");
+datesGridEl.innerHTML = "";
+
+dates.forEach(item => {
+const div = document.createElement("div");
+div.classList.add("date-item");
+div.classList.add(item.status === "available" ? "date-available" : "date-booked");
+div.innerText = item.date;
+datesGridEl.appendChild(div);
+});
+
+// COLLAPSIBLE TOGGLE
+document.getElementById("toggleDates").addEventListener("click", () => {
+const grid = document.getElementById("datesGrid");
+const heading = document.getElementById("toggleDates");
+if(grid.style.display === "none"){
+grid.style.display = "grid";
+heading.innerText = "Select a Date ▲";
+} else {
+grid.style.display = "none";
+heading.innerText = "Select a Date ▼";
+}
+});
+
+// CALCULATOR
 function calculateTotal() {
 const minimumFee = 45;
 
