--- a/calculator.html
+++ b/calculator.html
@@ -346,7 +346,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <div id="summaryDetails" style="margin-bottom:15px;">Complete the calculator and select a date to see summary.</div>
 
 <!-- Formspree Booking Form -->
-<form id="bookingForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+<form id="bookingForm" action="https://formspree.io/f/xrepnkqq" method="POST">
 <label>Name</label>
 <input type="text" name="name" id="customerName" placeholder="Your Name" required
 style="width:100%; padding:8px; margin-bottom:10px; border:2px solid #000; border-radius:6px;">
