--- a/calculator.html
+++ b/calculator.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Pressure Washing Carcroft - Instant Online Quote Calculator</title>
+<title>Pressure Washing Doncaster - Instant Online Quote Calculator</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/pressure-washing.html">
-<meta name="description" content="Professional pressure washing in Carcroft for driveways, patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
+<meta name="description" content="Professional pressure washing - Instant Online Quote, Patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
 
 <style>
 /* GLOBAL BOX-SIZING */
