--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -11,229 +11,65 @@
 
 <style>
 /* GLOBAL BOX-SIZING */
-*, *::before, *::after {
-box-sizing: border-box;
-}
+*, *::before, *::after { box-sizing: border-box; }
 
 /* HEADER STYLING */
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-
-.logo{
-max-height:90px;
-width:auto;
-}
+header{ text-align:center; padding:25px 10px; background:#fff; border-bottom:4px solid #27ae60; }
+.logo{ max-height:90px; width:auto; }
 
 /* CALL BUTTON */
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-.call-btn:hover{
-background:#333;
-color:#fff;
-}
+.call-btn{ display:inline-block; margin-top:18px; padding:14px 28px; background:#000; color:#fff; font-size:19px; text-decoration:none; font-weight:bold; border-radius:6px; border:2px solid #000; }
+.call-btn:hover{ background:#333; color:#fff; }
 
 /* FOOTER */
-.site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
-}
+.site-footer{ background:#000; color:#fff; text-align:center; padding:25px 15px; margin-top:40px; font-size:14px; }
 
 /* DATES GRID */
-.dates-grid-container {
-max-width:420px;
-width:95%;
-margin:20px auto;
-padding:15px;
-border:2px solid #000;
-border-radius:10px;
-background:#f5f5f5;
-}
-
-.dates-grid-container h3 {
-text-align:center;
-margin-bottom:10px;
-font-size:18px;
-cursor:pointer;
-}
-
-.dates-grid {
-display: grid;
-grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-gap:10px;
-text-align:center;
-display:none; /* hidden by default */
-}
-
-.date-item {
-padding:10px;
-border-radius:6px;
-font-weight:600;
-cursor: default; /* read-only */
-}
-
-.date-available {
-background-color:#27ae60;
-color:#fff;
-}
-
-.date-booked {
-background-color:#e74c3c;
-color:#fff;
-opacity:0.7;
-}
+.dates-grid-container { max-width:420px; width:95%; margin:20px auto; padding:15px; border:2px solid #000; border-radius:10px; background:#f5f5f5; }
+.dates-grid-container h3 { text-align:center; margin-bottom:10px; font-size:18px; cursor:pointer; }
+.dates-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap:10px; text-align:center; display:none; }
+.date-item { padding:10px; border-radius:6px; font-weight:600; cursor: default; }
+.date-available { background-color:#27ae60; color:#fff; cursor:pointer; }
+.date-booked { background-color:#e74c3c; color:#fff; opacity:0.7; cursor:not-allowed; }
+.date-available.selected { border: 2px solid #000; background-color: #2ecc71; box-shadow: 0 0 5px #000; }
 
 /* CALCULATOR STYLES */
-.calculator {
-max-width: 420px;
-width: 95%;
-margin: 10px auto 30px;
-padding: 20px;
-background: #fff;
-border: 2px solid #000;
-border-radius: 10px;
-color: #000;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-}
+.calculator { max-width: 420px; width:95%; margin: 10px auto 30px; padding: 20px; background:#fff; border:2px solid #000; border-radius:10px; color:#000; font-family:system-ui, -apple-system, BlinkMacSystemFont, sans-serif; }
+.calculator h2 { text-align:center; margin-bottom:20px; font-size:22px; }
+.service { margin-bottom:18px; }
+.service label { display:block; font-size:14px; margin-bottom:6px; }
+.service label span { font-size:12px; opacity:0.6; }
+.service input, .service select { width:100%; padding:8px; border:2px solid #000; border-radius:6px; text-align:right; background:#fff; font-size:17px; }
+.service input:focus, .service select:focus { outline:2px solid #000; background:#fff; }
+.pair { display:flex; gap:8px; }
+.pair input { flex:1 1 auto; }
+.subtotal { margin-top:4px; font-size:13px; opacity:0.7; text-align:right; }
+.total { margin-top:20px; padding:14px; border:2px solid #000; text-align:center; font-size:18px; font-weight:bold; background:#fafafa; color:#000 !important; }
+.clear-btn { margin-top:15px; padding:10px 20px; font-size:16px; border:2px solid #000; border-radius:6px; background:#fff; cursor:pointer; transition:border-color 0.2s, color 0.2s; }
+.clear-btn:hover { border-color:#555; color:#222; }
 
-.calculator h2 {
-text-align: center;
-margin-bottom: 20px;
-font-size: 22px;
-}
-
-.service {
-margin-bottom: 18px;
-}
-
-.service label {
-display: block;
-font-size: 14px;
-margin-bottom: 6px;
-}
-
-.service label span {
-font-size: 12px;
-opacity: 0.6;
-}
-
-.service input, .service select {
-width: 100%;
-padding: 8px;
-border: 2px solid #000;
-border-radius: 6px;
-text-align: right;
-background: #fff;
-font-size: 17px;
-}
-
-.service input:focus, .service select:focus {
-outline: 2px solid #000;
-background: #fff;
-}
-
-.pair {
-display: flex;
-gap: 8px;
-}
-
-.pair input {
-flex: 1 1 auto;
-}
-
-.subtotal {
-margin-top: 4px;
-font-size: 13px;
-opacity: 0.7;
-text-align: right;
-}
-
-.total {
-margin-top: 20px;
-padding: 14px;
-border: 2px solid #000;
-text-align: center;
-font-size: 18px;
-font-weight: bold;
-background: #fafafa;
-color: #000 !important;
-}
-
-.clear-btn {
-margin-top: 15px;
-padding: 10px 20px;
-font-size: 16px;
-border: 2px solid #000;
-border-radius: 6px;
-background: #fff;
-cursor: pointer;
-transition: border-color 0.2s, color 0.2s;
-}
-
-.clear-btn:hover {
-border-color: #555;
-color: #222;
-}
-
-@media (max-width: 480px) {
-.pair {
-flex-direction: column;
-gap: 6px;
-}
-.pair input, .calculator input, .calculator select {
-font-size: 16px;
-padding: 6px;
-}
-}
-
-input:invalid {
-border-color: red;
-background: #ffe6e6;
+@media (max-width:480px) {
+.pair { flex-direction: column; gap:6px; }
+.pair input, .calculator input, .calculator select { font-size:16px; padding:6px; }
+input:invalid { border-color:red; background:#ffe6e6; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- ✅ HEADER -->
 <header>
-<img src="/images/home-repairs-4u-doncaster.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
+<img src="/images/home-repairs-4u-doncaster.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- ✅ MAIN CONTENT -->
 <main style="max-width:1200px; margin:0 auto; padding:0 15px;">
 
-<!-- PRESSURE WASHING CALCULATOR -->
+<!-- CALCULATOR -->
 <div class="calculator">
 <h2>Pressure Washing Calculator</h2>
 
@@ -320,28 +156,43 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 </div>
 
 <div class="total" id="total">Enter measurements to see price</div>
-
 <button class="clear-btn" onclick="resetCalculator()">Clear All</button>
 </div>
-<!-- END CALCULATOR -->
 
-<!-- ✅ COLLAPSIBLE DATE GRID UNDER CALCULATOR -->
+<!-- DATES -->
 <div class="dates-grid-container">
 <h3 id="toggleDates">Select a Date ▼</h3>
-<div class="dates-grid" id="datesGrid">
-<!-- Dates populated by JS -->
+<div class="dates-grid" id="datesGrid"></div>
 </div>
+
+<!-- SUMMARY & FORM -->
+<div class="calculator-summary" style="max-width:420px; width:95%; margin:20px auto; padding:20px; background:#f5f5f5; border:2px solid #000; border-radius:10px;">
+<h2>Booking Summary</h2>
+<div id="summaryDetails" style="margin-bottom:15px;">Complete the calculator and select a date to see summary.</div>
+
+<form id="bookingForm" action="https://formspree.io/f/xrepnkqq" method="POST">
+<label>Name</label>
+<input type="text" name="name" id="customerName" placeholder="Your Name" required style="width:100%; padding:8px; margin-bottom:10px; border:2px solid #000; border-radius:6px;">
+<label>Email</label>
+<input type="email" name="email" id="customerEmail" placeholder="Your Email" required style="width:100%; padding:8px; margin-bottom:10px; border:2px solid #000; border-radius:6px;">
+<label>Phone</label>
+<input type="tel" name="phone" id="customerPhone" placeholder="Your Phone" required style="width:100%; padding:8px; margin-bottom:10px; border:2px solid #000; border-radius:6px;">
+
+<input type="hidden" name="selectedDate" id="selectedDate">
+<input type="hidden" name="bookingSummary" id="bookingSummary">
+
+<button type="submit" style="width:100%; padding:12px; font-size:16px; border:2px solid #000; border-radius:6px; background:#27ae60; color:#fff; font-weight:bold; cursor:pointer;">Submit Booking</button>
+</form>
 </div>
 
 </main>
 
-<!-- ✅ FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 </footer>
 
 <script>
-// DATE GRID ARRAY
+// DATES
 const dates = [
 { date: "Monday 27th Jan", status: "available" },
 { date: "Wednesday 29th Jan", status: "booked" },
@@ -350,7 +201,7 @@ const dates = [
 ];
 
 const datesGridEl = document.getElementById("datesGrid");
-datesGridEl.innerHTML = "";
+let chosenDate = null;
 
 dates.forEach(item => {
 const div = document.createElement("div");
@@ -358,75 +209,98 @@ div.classList.add("date-item");
 div.classList.add(item.status === "available" ? "date-available" : "date-booked");
 div.innerText = item.date;
 datesGridEl.appendChild(div);
+
+if(item.status === "available"){
+div.addEventListener("click", () => {
+document.querySelectorAll(".date-available.selected").forEach(d => d.classList.remove("selected"));
+div.classList.add("selected");
+chosenDate = item.date;
+document.getElementById("selectedDate").value = chosenDate;
+updateSummary();
+});
+}
 });
 
-// COLLAPSIBLE TOGGLE
+// COLLAPSE DATES
 document.getElementById("toggleDates").addEventListener("click", () => {
 const grid = document.getElementById("datesGrid");
 const heading = document.getElementById("toggleDates");
-if(grid.style.display === "none"){
-grid.style.display = "grid";
-heading.innerText = "Select a Date ▲";
-} else {
-grid.style.display = "none";
-heading.innerText = "Select a Date ▼";
-}
+if(grid.style.display === "none"){ grid.style.display = "grid"; heading.innerText = "Select a Date ▲"; }
+else { grid.style.display = "none"; heading.innerText = "Select a Date ▼"; }
 });
 
 // CALCULATOR
-function calculateTotal() {
+function calculateTotal(){
 const minimumFee = 45;
-
 const services = [
-{id: "driveway", rate: 3.5, inputs: ["drivewayLength", "drivewayWidth"], hasCondition:true},
-{id: "roof", rate: 8, inputs: ["roof"], hasCondition:true},
-{id: "patio", rate: 3.5, inputs: ["patioLength", "patioWidth"], hasCondition:true},
-{id: "walls", rate: 4, inputs: ["wallsLength", "wallsHeight"], hasCondition:true},
-{id: "conservatory", rate: 5, inputs: ["conservatory"], hasCondition:true},
-{id: "fence", rate: 2.5, inputs: ["fenceLength", "fenceHeight"], hasCondition:false},
+{id:"driveway", rate:3.5, inputs:["drivewayLength","drivewayWidth"], hasCondition:true},
+{id:"roof", rate:8, inputs:["roof"], hasCondition:true},
+{id:"patio", rate:3.5, inputs:["patioLength","patioWidth"], hasCondition:true},
+{id:"walls", rate:4, inputs:["wallsLength","wallsHeight"], hasCondition:true},
+{id:"conservatory", rate:5, inputs:["conservatory"], hasCondition:true},
+{id:"fence", rate:2.5, inputs:["fenceLength","fenceHeight"], hasCondition:false},
 ];
 
-let total = 0;
-
-services.forEach(service => {
-const values = service.inputs.map(id => Math.max(0, parseFloat(document.getElementById(id).value) || 0));
-const area = values.length === 1 ? values[0] : values[0] * values[1];
-
-let extra = 0;
-if(service.hasCondition){
-const conditionEl = document.getElementById(service.id + "Condition");
-if(conditionEl){
-extra = parseFloat(conditionEl.value) || 0;
+let total=0;
+services.forEach(s=>{
+const values = s.inputs.map(id=>Math.max(0, parseFloat(document.getElementById(id).value)||0));
+const area = values.length===1?values[0]:values[0]*values[1];
+let extra=0;
+if(s.hasCondition){
+const condEl=document.getElementById(s.id+"Condition");
+if(condEl) extra=parseFloat(condEl.value)||0;
 }
-}
-
-const subtotal = area * (service.rate + extra);
-document.getElementById(service.id + "Subtotal").innerText =
-`Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})}`;
-total += subtotal;
+const subtotal = area*(s.rate+extra);
+document.getElementById(s.id+"Subtotal").innerText=`Subtotal: £${subtotal.toLocaleString('en-GB',{minimumFractionDigits:2,maximumFractionDigits:2})}`;
+total+=subtotal;
 });
 
-const totalEl = document.getElementById("total");
-
-if (total === 0) {
-totalEl.innerText = "Enter measurements to see price";
-return;
+const totalEl=document.getElementById("total");
+if(total===0){ totalEl.innerText="Enter measurements to see price"; updateSummary(); return; }
+const finalTotal=total<minimumFee?minimumFee:total;
+totalEl.innerText = total<minimumFee?`Total: £${finalTotal.toLocaleString('en-GB',{minimumFractionDigits:2})} (Minimum charge applied)`:`Total: £${finalTotal.toLocaleString('en-GB',{minimumFractionDigits:2})}`;
+updateSummary();
 }
 
-const finalTotal = total < minimumFee ? minimumFee : total;
-
-totalEl.innerText = total < minimumFee
-? `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})} (Minimum charge applied)`
-: `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})}`;
+function resetCalculator(){
+document.querySelectorAll('.calculator input').forEach(i=>i.value='');
+document.querySelectorAll('.calculator select').forEach(s=>s.selectedIndex=0);
+document.querySelectorAll('.subtotal').forEach(s=>s.innerText='Subtotal: £0.00');
+document.getElementById("total").innerText="Enter measurements to see price";
+chosenDate=null;
+document.querySelectorAll(".date-available.selected").forEach(d=>d.classList.remove("selected"));
+updateSummary();
 }
 
-function resetCalculator() {
-document.querySelectorAll('.calculator input').forEach(input => input.value = '');
-document.querySelectorAll('.calculator select').forEach(select => select.selectedIndex = 0);
-document.querySelectorAll('.subtotal').forEach(sub => sub.innerText = 'Subtotal: £0.00');
-const totalEl = document.getElementById("total");
-totalEl.innerText = "Enter measurements to see price";
+function updateSummary(){
+const summaryEl=document.getElementById("summaryDetails");
+const totalEl=document.getElementById("total").innerText;
+const selectedDateText=chosenDate?`<strong>Date:</strong> ${chosenDate}<br>`:'';
+const servicesSummary=[
+{id:"driveway", name:"Driveway", inputs:["drivewayLength","drivewayWidth"], condition:true},
+{id:"roof", name:"Roof", inputs:["roof"], condition:true},
+{id:"patio", name:"Patio", inputs:["patioLength","patioWidth"], condition:true},
+{id:"walls", name:"Walls", inputs:["wallsLength","wallsHeight"], condition:true},
+{id:"conservatory", name:"Conservatory Roof", inputs:["conservatory"], condition:true},
+{id:"fence", name:"Fence", inputs:["fenceLength","fenceHeight"], condition:false},
+];
+let summaryText='';
+servicesSummary.forEach(s=>{
+const values=s.inputs.map(id=>parseFloat(document.getElementById(id).value)||0);
+const area=values.length===1?values[0]:values[0]*values[1];
+if(area>0){
+let cond='';
+if(s.condition){ const condVal=document.getElementById(s.id+"Condition"); cond=" ("+condVal.options[condVal.selectedIndex].text+")"; }
+summaryText+=`<strong>${s.name}:</strong> ${area} m²${cond}<br>`;
 }
+});
+summaryEl.innerHTML=summaryText?summaryText+"<br>"+selectedDateText+"<strong>"+totalEl+"</strong>":"Complete the calculator and select a date to see summary.";
+}
+
+// FORM SUBMISSION TO FORMSPREE
+document.getElementById("bookingForm").addEventListener("submit", function(){
+document.getElementById("bookingSummary").value=document.getElementById("summaryDetails").innerText;
+});
 </script>
 
 </body>
