--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -181,9 +181,11 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <input type="hidden" name="selectedDate" id="selectedDate">
 <input type="hidden" name="bookingSummary" id="bookingSummary">
 
-<button type="submit" style="width:100%; padding:12px; font-size:16px; border:2px solid #000; border-radius:6px; background:#27ae60; color:#fff; font-weight:bold; cursor:pointer;">Submit Booking</button>
+<button type="submit" style="width:100%; padding:12px; font-size:16px; border:2px solid #000; border-radius:6px; background:#27ae60; color:#fff; font-weight:bold; cursor:pointer;">Request Call Back</button>
 </form>
 </div>
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+
 
 </main>
 
