--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -183,8 +183,12 @@ input:invalid { border-color:red; background:#ffe6e6; }
 
 <button type="submit" style="width:100%; padding:12px; font-size:16px; border:2px solid #000; border-radius:6px; background:#27ae60; color:#fff; font-weight:bold; cursor:pointer;">Request Call Back</button>
 </form>
+  
+<div style="text-align:center; margin:20px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">
+📞 Call Now: 07735 873694
+</a>
 </div>
-<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 
 
 </main>
