--- a/local/pressure-washing-conisbrough.html
+++ b/local/pressure-washing-conisbrough.html
@@ -1,1 +1,289 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Pressure Washing Conisbrough | Driveway & Patio Cleaning Services</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-conisbrough.html">
+<meta name="description" content="Instant online pressure washing quote. Expert driveway, patio, and exterior cleaning for homes and businesses. Reliable local service in Conisbrough.">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get a Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Professional Pressure Washing in Conisbrough</h1>
+<p>Professional pressure washing in Conisbrough is an effective way to keep your property looking clean, well maintained, and protected from long-term damage. Outdoor surfaces are constantly exposed to the elements, leading to a build-up of dirt, algae, moss, and grime that can quickly make an area look neglected. Our pressure washing service is designed to remove these contaminants safely and thoroughly, restoring the original appearance of your exterior surfaces. We use professional-grade equipment and proven techniques to ensure excellent results without causing damage. Whether your property is residential or commercial, pressure washing provides an immediate visual improvement and helps preserve the condition of outdoor areas. As a local service covering Sprotbrough, we understand the challenges caused by damp weather and shaded areas that encourage organic growth. Regular pressure washing not only enhances appearance but also reduces maintenance costs over time by preventing surface deterioration. From small domestic jobs to larger exterior cleaning projects, we provide reliable and efficient solutions tailored to your needs.</p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Pressure washing driveway in Conisbrough removing moss and dirt"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Driveway Cleaning Services in Conisbrough</h2>
+<p>Driveways are one of the most frequently used and visually prominent parts of any property in Conisbrough. Over time, oil stains, tyre marks, moss, weeds, and algae can accumulate, making driveways look tired and unsafe. Our driveway pressure washing service is designed to deeply clean a variety of surfaces, including block paving, concrete, and tarmac. We carefully adjust pressure levels to suit each surface, ensuring a thorough clean without causing erosion or damage. Removing built-up grime not only improves appearance but also reduces slip hazards, especially during wet or icy conditions. A professionally cleaned driveway can dramatically enhance kerb appeal and add value to your property. It also helps extend the lifespan of the surface by preventing weed growth and joint breakdown. With our Sprotbrough driveway cleaning service, you can enjoy a cleaner, safer, and more welcoming entrance to your home or business.</p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Patio pressure washing service in Conisbrough residential garden"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio and Paving Restoration</h2>
+<p>Patios and paved areas are designed for relaxation and entertaining, but they can quickly become unsightly if not properly maintained. In Conisbrough, patios are particularly prone to algae and moss due to damp conditions and limited sunlight. Our pressure washing service restores patios and paving by lifting dirt from deep within the surface and joints. This process revitalises natural stone, concrete, and block paving, bringing back colour and texture that may have been hidden for years. In addition to improving appearance, pressure washing significantly improves safety by reducing slippery surfaces. A clean patio creates a more enjoyable outdoor space for family gatherings, barbecues, and social events. Regular cleaning also prevents long-term damage caused by organic growth and trapped moisture. Our patio cleaning service in Conisbrough offers an affordable alternative to replacement, delivering impressive results that make your outdoor spaces usable and attractive again.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="Commercial pressure washing in Conisbrough car park and walkways"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Residential Pressure Washing Solutions</h2>
+<p>Our residential pressure washing services in Conisbrough are ideal for homeowners looking to maintain and protect their property. We clean a wide range of exterior surfaces, including paths, walls, fencing, patios, and driveways. Over time, dirt and organic growth can cause staining and surface wear if left untreated. Pressure washing removes these contaminants, helping to preserve the structure and appearance of your home. A clean exterior not only looks better but also reflects pride in ownership and care. We take a careful, surface-specific approach to ensure safe and effective cleaning for every job. Whether you are preparing your home for sale, carrying out routine maintenance, or simply want to refresh its appearance, our residential pressure washing service delivers reliable and noticeable results. Local homeowners in Sprotbrough trust us for our attention to detail, professionalism, and consistent quality of work.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Trusted pressure washing professionals in Selby YO8 cleaning a driveway with high-pressure equipment, delivering reliable results for homes and businesses."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Commercial Pressure Washing in Conisbrough</h2>
+<p>Maintaining a clean exterior is essential for businesses in Sprotbrough, as first impressions matter. Our commercial pressure washing services help businesses present a professional, welcoming image to customers and clients. We clean shop fronts, car parks, walkways, forecourts, and building exteriors, removing dirt, chewing gum, algae, and traffic-related grime. Clean surfaces not only improve appearance but also help meet health and safety standards by reducing slip hazards. We understand the importance of minimising disruption, so our services are carried out efficiently and at times that suit your business operations. Using professional equipment and proven techniques, we deliver consistent, high-quality results across all commercial properties. Whether you run a small local shop or manage a larger commercial site, our Conisbrough pressure washing service provides a cost-effective solution for maintaining clean and safe premises.</p>
+<img src="/images/pressure-washing-algae.webp"
+alt="Professional exterior cleaning using pressure washer in Conisbrough"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Close -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Why Choose Our Conisbrough Pressure Washing Service</h2>
+<p>Choosing our pressure washing service in Conisbrough means working with experienced professionals who value quality, reliability, and customer satisfaction. We use modern equipment and environmentally responsible methods to achieve excellent results while protecting your surfaces. Regular pressure washing helps extend the lifespan of driveways, patios, and other exterior areas, reducing the need for costly repairs or replacements. As a local service, we take pride in serving the Conisbrough community and building long-term relationships with our customers. From the initial enquiry to the completed job, we focus on clear communication and high standards of workmanship. Whether you need a one-off clean or regular maintenance, our pressure washing service offers a practical and effective way to keep your property looking its best all year round.</p>
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-conisbrough.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.4819,
+"longitude": -1.2321
+},
+"areaServed": "Conisbrough",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
