--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -399,7 +399,7 @@ text: "Professionals use the correct equipment, pressure levels, and cleaning me
 @type: "LocalBusiness",
 name: "Home Repairs 4U",
 image: "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-url: "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
+url: "https://homerepairs4u.com/local/pressure-washing-arksey.html",
 telephone: "+44-07735-873694",
 priceRange: "££",
 address: {
@@ -412,10 +412,10 @@ addressCountry: "GB"
 },
 geo: {
 @type: "GeoCoordinates",
-latitude: 53.583,
-longitude: -1.186
+latitude: 53.5549,
+longitude: -1.1262
 },
-areaServed: "Carcroft",
+areaServed: "Arksey",
 openingHoursSpecification: [
 {
 @type: "OpeningHoursSpecification",
